--- a/styles.css
+++ b/styles.css
@@ -34,7 +34,7 @@ body {
     margin-top: 2em;
     text-align: center;
 }
-.titulo {
+.tituloc {
     font-family: "Puppies Play", cursive;
     font-weight: 400;
     font-style: normal;
@@ -108,7 +108,6 @@ body {
     background-color: #79c49fff;
     padding: 1em;                
 }
-
 .fecha {
     font-size: 20pt;
     font-weight: 700;
@@ -157,12 +156,9 @@ li {
     padding: 1em;
     margin: 1em;
 }
-
 .boton:hover {
 background-color: #70c575;
 }
-
 .boton:active {
 background-color: #28592a;
 }
-
