--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ html {
     width: 1000px;
 }
 body {
-    width: 1000px;
+    width: 1200px;
     margin: 0;
     font-family: Quicksand, Arial, Helvetica, sans-serif;
     
@@ -19,7 +19,7 @@ body {
 .container {
     background-color: #79c49faa;
     display: grid;
-    grid-template-columns: 1000px;
+    grid-template-columns: 100%;
     grid-auto-rows: auto;
     gap: 10px;
     padding: 0em;
@@ -29,6 +29,8 @@ body {
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 3fr 1fr 1fr;
+    padding-left: 2em;
+    padding-right: 2em;
 }
 .logo {
     margin-top: 2em;
@@ -62,6 +64,8 @@ body {
     display: grid;
     grid-template-columns: 1fr;
     grid-auto-rows: 1fr;
+    padding-left: 2em;
+    padding-right: 2em;
 }
 .subtitulo {
     font-family: "Puppies Play", cursive;
@@ -90,23 +94,29 @@ body {
     display: grid;
     grid-template-columns: 1fr;
     grid-auto-rows: 1fr;
-    padding: 1.5em;
+    padding-left: 2em;
+    padding-right: 2em;
 }
 .inversion {
-    padding: 1.5em;
+    padding-left: 2em;
+    padding-right: 2em;
 }
 .tyc {
     display: grid;
     grid-template-columns: 1fr;
     grid-auto-rows: 1fr;
-    padding: 3em;
+    padding-left: 4em;
+    padding-right: 2em;
+
 }
 .pie {
     display: grid;
     grid-template-columns: 1fr;
     grid-auto-rows: 1fr;
     background-color: #79c49fff;
-    padding: 1em;                
+    padding: 1em;
+    padding-left: 2em;
+    padding-right: 2em;                
 }
 .fecha {
     font-size: 20pt;
@@ -124,10 +134,12 @@ li {
     font-family: "Kalam", cursive;
     font-weight: 400;
     font-style: normal;
-    font-size: 24pt;
+    font-size: 22pt;
     align-content: center;
     text-align: left;
     color: #202020;
+    text-shadow: 4px 4px 5px rgb(208, 232, 219);
+    
 }
 .firma {
     font-size: 64pt;
