--- a/styles.css
+++ b/styles.css
@@ -112,7 +112,7 @@ body {
 .pie {
     display: grid;
     grid-template-columns: 1fr;
-    grid-auto-rows: 1fr;
+    grid-auto-rows: auto;
     background-color: #79c49fff;
     padding: 1em;
     padding-left: 2em;
@@ -156,9 +156,9 @@ li {
         0px 0px 7px rgba(0, 0, 0, 0.4);
 }
 .boton{
-    font-size: larger;
+    height: 6em;
+    font-size: 24px;
     font-weight: bold;
-    padding: 10px 20px;
     background-color: #4CAF50;
     color: white;
     border: none;
@@ -166,11 +166,18 @@ li {
     cursor: pointer;
     text-align: center;
     padding: 1em;
-    margin: 1em;
+    margin: 2em;
+    margin-left: 10em;
 }
 .boton:hover {
 background-color: #70c575;
 }
 .boton:active {
 background-color: #28592a;
+}
+.fecha{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 22px;
+    color: #fff;
+    margin-top: 6px;
 }
