--- a/styles.css
+++ b/styles.css
@@ -8,10 +8,10 @@
 }
 html { 
     background-color: #fff; 
-    width: 1000px;
+    width: 1080px;
 }
 body {
-    width: 1200px;
+    width: 1080px;
     margin: 0;
     font-family: Quicksand, Arial, Helvetica, sans-serif;
     
@@ -60,13 +60,6 @@ body {
     color: #404040;
     text-transform: capitalize;
 }
-.diagnostico {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-auto-rows: 1fr;
-    padding-left: 2em;
-    padding-right: 2em;
-}
 .subtitulo {
     font-family: "Puppies Play", cursive;
     font-weight: 400;
@@ -76,10 +69,10 @@ body {
     text-align: center;
     color: #ffffffff;
     text-shadow:
-        -1px -1px 1px #aaa,
-        0px 4px 1px rgba(0, 0, 0, 0.5),
-        4px 4px 5px rgba(0, 0, 0, 0.7),
-        0px 0px 7px rgba(0, 0, 0, 0.4);
+    -1px -1px 1px #aaa,
+    0px 4px 1px rgba(0, 0, 0, 0.5),
+    4px 4px 5px rgba(0, 0, 0, 0.7),
+    0px 0px 7px rgba(0, 0, 0, 0.4);
 }
 .txt {
     font-family: "Kalam", cursive;
@@ -90,10 +83,11 @@ body {
     text-align: center;
     color: #202020;
 }
+.diagnostico {
+    padding-left: 2em;
+    padding-right: 2em;
+}
 .tratamiento {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-auto-rows: 1fr;
     padding-left: 2em;
     padding-right: 2em;
 }
@@ -101,18 +95,12 @@ body {
     padding-left: 2em;
     padding-right: 2em;
 }
-.tyc {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-auto-rows: 1fr;
-    padding-left: 4em;
+.tyc {    
+    padding-left: 2em;
     padding-right: 2em;
 
 }
 .pie {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-auto-rows: auto;
     background-color: #79c49fff;
     padding: 1em;
     padding-left: 2em;
@@ -130,22 +118,21 @@ body {
     align-content: center;
     text-align: center;
 }
-li {
-    font-family: "Kalam", cursive;
-    font-weight: 400;
+.tycc {
+    font-family: "Kalam";
     font-style: normal;
     font-size: 22pt;
     align-content: center;
     text-align: left;
-    color: #202020;
-    text-shadow: 4px 4px 5px rgb(208, 232, 219);
+    color: #f8f8f8;
+    text-shadow: 4px 4px 5px rgb(41, 41, 41);
     
 }
 .firma {
     font-size: 64pt;
-    font-family: "Mea Culpa", cursive;
+    font-family: "Mea Culpa";
     font-weight: 400;
-    font-style: normal;
+    font-style: italic;
     align-content: center;
     text-align: center;
     color: #ffffffff;
@@ -162,7 +149,7 @@ li {
     background-color: #4CAF50;
     color: white;
     border: none;
-    border-radius: 7px;
+    border-radius: 25px;
     cursor: pointer;
     text-align: center;
     padding: 1em;
@@ -176,8 +163,8 @@ background-color: #70c575;
 background-color: #28592a;
 }
 .fecha{
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 22px;
+    font-family: Quicksand;
+    font-size: 24px;
     color: #fff;
     margin-top: 6px;
 }
